--- a/src/app/modules/blogs/card/card.ng.scss
+++ b/src/app/modules/blogs/card/card.ng.scss
@@ -38,7 +38,7 @@
     .m-blogCard__title {
       padding: $spacing4;
       a {
-        @include heading4Bold;
+        @include body2Medium;
         @include m-theme() {
           color: themed($m-textColor--primary);
         }
