--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -10,6 +10,13 @@
     .m-comments__thread {
       margin: 0;
     }
+    .m-comments__thread--nested {
+      ::ng-deep m-comment {
+        .m-comment {
+          padding-left: 0 !important;
+        }
+      }
+    }
     .m-comments__thread--topLevel {
       ::ng-deep {
         > m-comment {
