--- a/src/app/modules/newsfeed/newsfeed.component.ng.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.ng.scss
@@ -1,29 +1,27 @@
 @import 'defaults.scss';
 
-// ojm figure out why there's a gap and it shoudl be 1099
-$layoutMax2ColWidth: '1039px';
-
 :host {
   .m-newsfeed {
+    &.m-newsfeed--activityV2 {
+      .m-pageLayout__pane--main {
+        @include borderRight;
+      }
+
+      .m-pageLayout__pane--right {
+        @include m-theme() {
+          border-left: none !important;
+        }
+      }
+      ::ng-deep m-activity {
+        border: none !important;
+      }
+    }
+
     &:not(.m-newsfeed--activityV2) {
       ::ng-deep m-activity {
         margin-bottom: $spacing5;
       }
     }
-    &.m-newsfeed--activityV2 {
-      .m-newsfeed--feed {
-        @media screen and (min-width: $max-mobile) and (max-width: $layoutMax2ColWidth) {
-          @include borderRight;
-        }
-      }
-
-      ::ng-deep m-activity {
-        border: none !important;
-      }
-    }
-    // ojm look at latest posts (guest mode) ,
-    // .m-newsfeed__inner
-    // padding should be 0
   }
 
   ::ng-deep {
