--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
@@ -2,18 +2,16 @@
   <span class="m-networkApproval-title">
     Approve Transfer
   </span>
-  <span class="m-networkApproval-subtitle">
-    100 MINDS
-  </span>
+  <span class="m-networkApproval-subtitle"> {{ amount }} MINDS </span>
   <i class="material-icons m-networkApproval-priority">priority_high</i>
   <span class="m-networkApproval-content">
     You currently don’t have authorization to transfer the above amount. To
     continue you need to approve the transfer. Alternativley you may approve
     max, so you may skip this step in the future.
   </span>
-  <m-button color="blue" (click)="navigate()">
+  <m-button color="blue" (click)="approve()">
     <ng-container i18n="verb|@@M__ACTION__CANCEL"
-      >Approve 100 MINDS</ng-container
+      >Approve {{ amount }} MINDS</ng-container
     >
   </m-button>
   <div class="mdl-grid m-networkApproval-footer">
