deposit token to polygon from mainnet

--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
@@ -14,7 +14,7 @@
       >Approve {{ amount }} MINDS</ng-container
     >
   </m-button>
-  <div class="mdl-grid m-networkApproval-footer">
+  <div class="mdl-grid m-networkApproval-footer" (click)="approveMax()">
     <span class="m-networkApproval-approve">
       Approve Max
     </span>
