--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="m-networkConfirmation-button_container">
-    <m-button color="blue" (click)="navigate()">
+    <m-button color="blue" (click)="transfer()">
       <ng-container i18n="verb|@@M__ACTION__CANCEL"
         >Confirm Transfer</ng-container
       >
