--- a/src/app/modules/notices/panels/verify-email/verify-email-notice.component.html
+++ b/src/app/modules/notices/panels/verify-email/verify-email-notice.component.html
@@ -12,6 +12,7 @@
     solid="true"
     size="small"
     (onAction)="onPrimaryOptionClick($event)"
+    data-ref="feed-notice-verify-email-primary-click"
   >
     <ng-container i18n="@@FEED_NOTICE__VERIFY_EMAIL__RESEND_EMAIL">
       Re-send email
