--- a/src/app/modules/notices/panels/enable-push-notifications/enable-push-notifications-notice.component.html
+++ b/src/app/modules/notices/panels/enable-push-notifications/enable-push-notifications-notice.component.html
@@ -1,4 +1,4 @@
-<m-feedNotice icon="info" (dismissClick)="dismiss()">
+<m-feedNotice icon="info" (dismissClick)="dismiss()" dataRefId="enable-push">
   <span
     class="m-feedNotice__title"
     i18n="@@FEED_NOTICE__ENABLE_PUSH_NOTIFICATIONS__TITLE"
@@ -18,6 +18,7 @@
     solid="true"
     size="small"
     (onAction)="onPrimaryOptionClick($event)"
+    data-ref="feed-notice-enable-push-primary-click"
   >
     <ng-container i18n="@@FEED_NOTICE__ENABLE_PUSH_NOTIFICATIONS__ENABLE">
       Enable
@@ -27,6 +28,7 @@
     class="m-feedNotice__buttonSecondary"
     size="small"
     (onAction)="onSecondaryOptionClick($event)"
+    data-ref="feed-notice-enable-push-secondary-click"
   >
     <ng-container i18n="@@FEED_NOTICE__ENABLE_PUSH_NOTIFICATIONS__CUSTOMIZE">
       Customize
