withdraw assets from polygon to mainnet

--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
@@ -6,7 +6,7 @@
 
   <div class="mdl-grid m-networkConfirmation-process">
     <div class="mdl-cell m-networkConfirmation-box">
-      {{ from }}
+      {{ from.networkName }}
     </div>
     <div
       class="mdl-cell mdl-cell--1-col m-networkConfirmation-chevron__container"
@@ -16,7 +16,7 @@
       <i class="material-icons m-networkApproval-info">chevron_right</i>
     </div>
     <div class="mdl-cell m-networkConfirmation-box">
-      {{ to }}
+      {{ to.networkName }}
     </div>
   </div>
 
