--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/transaction-state/transaction-state.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/transaction-state/transaction-state.component.html
@@ -3,9 +3,7 @@
     <span class="m-networkPending-title">
       Transfer amount
     </span>
-    <span class="m-networkPending-subtitle">
-      100 MINDS
-    </span>
+    <span class="m-networkPending-subtitle"> {{ amount }} MINDS </span>
   </div>
 
   <div class="m-networkPending-wrapper">
