--- a/src/app/modules/channels/v2/feed/feed.component.ng.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.ng.scss
@@ -38,6 +38,14 @@
         }
         m-newsfeed__entity {
           margin-bottom: 0;
+
+          &:first-child {
+            m-activityV2 {
+              @include m-theme() {
+                border-top: none;
+              }
+            }
+          }
         }
       }
     }
