--- a/src/app/modules/newsfeed/newsfeed.component.ng.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.ng.scss
@@ -1,8 +1,16 @@
 @import 'defaults.scss';
 
 :host {
+  // ******************************************
+  // ** ACTIVITY V2 **
+  // ******************************************
+
   .m-newsfeed {
     &.m-newsfeed--activityV2 {
+      .m-newsfeed__inner {
+        padding: 0;
+      }
+
       .m-pageLayout__pane--main {
         @include borderRight;
       }
@@ -23,6 +31,13 @@
       }
     }
   }
+  // ******************************************
+  // ******************************************
+  // ******************************************
+  // ** DEFAULT **
+  // ******************************************
+  // ******************************************
+  // ******************************************
 
   ::ng-deep {
     m-composer {
