--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -125,6 +125,178 @@
     width: 100%;
   }
 
+  // ACTIONS
+  .m-activityToolbar__actions {
+    ::ng-deep > * {
+      flex-grow: 1;
+      display: flex;
+      justify-content: flex-start;
+      flex-basis: calc(25% - 5px);
+      @media screen and (max-width: $max-mobile) {
+        flex-basis: auto;
+      }
+
+      &:last-child {
+        flex-basis: 20px;
+        flex-grow: 0;
+
+        @media screen and (max-width: $max-mobile) {
+          flex-basis: 20px;
+        }
+      }
+
+      > a,
+      ::ng-deep .m-activityRemindButton__icon {
+        line-height: 20px;
+        cursor: pointer;
+
+        .minds-counter {
+          @include body2Bold;
+        }
+
+        i.material-icons {
+          font-size: 20px;
+        }
+
+        i.material-icons,
+        .minds-counter {
+          vertical-align: middle;
+          transition: color 250ms ease-in-out;
+        }
+
+        &:not(.selected) {
+          i.material-icons,
+          .minds-counter {
+            @include m-theme() {
+              color: themed($m-textColor--secondary);
+            }
+          }
+          &:hover {
+            i.material-icons,
+            .minds-counter {
+              @include m-theme() {
+                color: themed($m-textColor--primary);
+              }
+            }
+          }
+        }
+
+        &.selected {
+          i.material-icons,
+          .minds-counter {
+            @include m-theme() {
+              color: themed($m-link);
+            }
+          }
+        }
+      }
+    }
+
+    :last-child {
+      margin-right: 0;
+    }
+
+    ::ng-deep minds-button-comment {
+      cursor: pointer;
+      &:hover {
+        .selected i.material-icons,
+        .selected .minds-counter {
+          @include m-theme() {
+            color: themed($m-textColor--primary);
+          }
+        }
+      }
+
+      .selected i.material-icons,
+      .selected .minds-counter {
+        transition: color 250ms ease-in-out;
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+      }
+    }
+
+    ::ng-deep m-wire-button {
+      .m-wire-button {
+        border: 0 !important;
+        padding: 0;
+        height: auto;
+
+        .ion-icon,
+        .material-icons {
+          transition: color 250ms ease-in-out;
+          @include m-theme() {
+            color: themed($m-textColor--secondary);
+          }
+        }
+
+        &:hover {
+          .ion-icon,
+          .material-icons {
+            @include m-theme() {
+              color: themed($m-textColor--primary);
+            }
+          }
+        }
+        .m-icon__assetsFile {
+          margin-right: 5px;
+        }
+        span {
+          margin-left: 0;
+          font-weight: 500;
+        }
+      }
+      .m-tipButton {
+        margin-top: 0;
+      }
+    }
+
+    ::ng-deep m-activityV2__boostButton {
+      .m-boostButton {
+        width: auto;
+        height: auto;
+        min-width: unset;
+        border-radius: 0;
+        text-transform: unset;
+        padding: 0;
+        font-size: 20px;
+        font-weight: 500;
+        letter-spacing: 0.7px;
+        cursor: pointer;
+        line-height: normal;
+
+        transition: color 250ms ease-in-out;
+
+        m-icon {
+          vertical-align: middle;
+
+          i {
+            font-size: 20px !important; // Override for fixed height.
+          }
+        }
+
+        transition: color 250ms ease-in-out;
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+
+        &:hover {
+          @include m-theme() {
+            color: themed($m-textColor--primary);
+          }
+        }
+
+        &,
+        &:hover {
+          @include m-theme() {
+            border: 0;
+          }
+        }
+      }
+    }
+  }
+  // METRICS
+
   .m-activityToolbar__metrics {
     @include borderTop;
     @include borderBottom;
@@ -151,118 +323,6 @@
 
     &:last-child {
       padding-right: 0;
-    }
-  }
-
-  .m-activityToolbar__actions {
-    ::ng-deep > * {
-      margin-right: $spacing5;
-
-      > a,
-      ::ng-deep .m-activityRemindButton__icon {
-        line-height: 18px;
-        cursor: pointer;
-
-        .minds-counter {
-          @include body2Bold;
-        }
-
-        i.material-icons {
-          font-size: 18px;
-        }
-
-        i.material-icons,
-        .minds-counter {
-          vertical-align: middle;
-          @include m-theme() {
-            color: themed($m-textColor--secondary);
-          }
-        }
-
-        &.selected {
-          i.material-icons,
-          .minds-counter {
-            @include m-theme() {
-              color: themed($m-link);
-            }
-          }
-        }
-      }
-    }
-
-    :last-child {
-      margin-right: 0;
-    }
-
-    ::ng-deep minds-button-comment {
-      cursor: pointer;
-      .selected i.material-icons,
-      .selected .minds-counter {
-        @include m-theme() {
-          color: themed($m-textColor--secondary);
-        }
-      }
-    }
-
-    ::ng-deep m-wire-button {
-      .m-wire-button {
-        border: 0 !important;
-        padding: 0;
-        height: auto;
-        > .ion-icon {
-          @include m-theme() {
-            color: themed($m-textColor--secondary);
-          }
-        }
-        > * {
-          @include m-theme() {
-            color: themed($m-textColor--secondary);
-          }
-        }
-        .m-icon__assetsFile {
-          margin-right: 5px;
-        }
-        span {
-          margin-left: 0;
-          font-weight: 500;
-        }
-      }
-      .m-tipButton {
-        margin-top: 0;
-      }
-    }
-
-    ::ng-deep .m-boostButton {
-      width: auto;
-      height: auto;
-      min-width: unset;
-      border-radius: 0;
-      text-transform: unset;
-      padding: 0;
-      font-size: 15px;
-      font-weight: 500;
-      letter-spacing: 0.7px;
-      cursor: pointer;
-      line-height: normal;
-
-      m-icon {
-        vertical-align: middle;
-
-        i {
-          font-size: 20px !important; // Override for fixed height.
-        }
-      }
-
-      @include m-theme() {
-        color: themed($m-textColor--secondary);
-      }
-
-      &,
-      &:hover {
-        @include m-theme() {
-          border: 0;
-        }
-      }
     }
   }
 }
