--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -141,18 +141,15 @@ m-newsfeed {
 }
 
 .m-theme__2020 .m-newsfeed {
-  .m-newsfeed__inner {
-    padding: 0;
-    // ojm TEMP keep below, uncomment and put under feature flag
-    // padding: 20px 40px;
-    // @media screen and (max-width: $layoutMin3ColWidth) {
-    //   padding: 20px;
-    // }
+  &:not(.m-newsfeed--activityV2) {
+    .m-newsfeed__inner {
+      padding: 20px 40px;
+      @media screen and (max-width: $layoutMin3ColWidth) {
+        padding: 20px;
+      }
+    }
   }
 
-  .m-pageLayout__pane--main {
-    // padding: 40px;
-  }
   .m-pageLayout__pane--right {
     padding-right: 0;
   }
