Small adjustments activities v2

--- a/src/app/common/components/badges/badges.component.ng.scss
+++ b/src/app/common/components/badges/badges.component.ng.scss
@@ -12,6 +12,10 @@
       font-size: 20px;
     }
 
+    .m-channel--badges li:last-child {
+      padding-right: 0;
+    }
+
     @media screen and (max-width: $max-mobile) {
       /* prevent badges from shown behind right container */
       overflow: visible !important;
