add off state to "all" toggle and hover state to all switches

--- a/src/app/common/components/toggle/toggle.component.scss
+++ b/src/app/common/components/toggle/toggle.component.scss
@@ -46,6 +46,12 @@ m-toggle {
       @include m-theme() {
         background: themed($m-blue);
       }
+
+      &:hover {
+        @include m-theme() {
+          background: themed($m-link--hover);
+        }
+      }
     }
 
     &.m-toggle__switch--off {
