--- a/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
+++ b/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
@@ -43,6 +43,7 @@
       (mModelChange)="toggle('all')"
       leftValue="off"
       rightValue="on"
+      offState="off"
     ></m-toggle>
     <span i18n="@@SETTINGS_NOTIFICATIONS_PUSH__NOTIFS_ENABLED"
       >All push notifications enabled</span
