add error handling to push notif enabling

--- a/src/app/modules/settings-v2/account/notifications-v3/notifications-settings-v3.ng.scss
+++ b/src/app/modules/settings-v2/account/notifications-v3/notifications-settings-v3.ng.scss
@@ -6,6 +6,13 @@
     margin-bottom: 100px; // avoid overlap of mobile bottom bars
   }
 
+  .m-pushNotifSettings__pushNotificationEnablingFailed {
+    margin-top: $minds-margin;
+    @include m-theme() {
+      color: themed($m-alert);
+    }
+  }
+
   .m-pushNotifSettings__optionContainer {
     display: flex;
     flex-flow: column nowrap;
